--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nova+Square&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&family=Poppins&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -6,6 +6,6 @@
 
 @layer base {
   html {
-    font-family: "Nova Square", sans-serif;
+    font-family: "Poppins", sans-serif;
   }
 }
